force-app/main/default/objects/Loan_ReEngineering__c/Loan_ReEngineering__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Loan Re-Engineering</label>
</CustomObject>