force-app/main/default/objects/Loan_ReEngineering__c/fields/Canaccede_API_User__c.field-meta.xml
<CustomField>
    <fullName>Canaccede_API_User__c</fullName>
    <label>Canaccede API User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>