force-app/main/default/objects/Loan_ReEngineering__c/fields/Credit_Token_Seq__c.field-meta.xml
<CustomField>
    <fullName>Credit_Token_Seq__c</fullName>
    <label>Credit Token Seq</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>