force-app/main/default/objects/Loan_ReEngineering__c/fields/Funding_Batch_Approver__c.field-meta.xml
<CustomField>
    <fullName>Funding_Batch_Approver__c</fullName>
    <label>Funding Batch Approver</label>
    <length>100</length>
    <type>Text</type>
</CustomField>