force-app/main/default/objects/Loan_ReEngineering__c/fields/Load_Customer_Data__c.field-meta.xml
<CustomField>
    <fullName>Load_Customer_Data__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Load Customer Data</label>
    <type>Checkbox</type>
</CustomField>