force-app/main/default/objects/Loan_ReEngineering__c/fields/Loan_Start_Days__c.field-meta.xml
<CustomField>
    <fullName>Loan_Start_Days__c</fullName>
    <label>Loan Start Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>