force-app/main/default/objects/Loan_ReEngineering__c/fields/Megasys_Account_Import_Code__c.field-meta.xml
<CustomField>
    <fullName>Megasys_Account_Import_Code__c</fullName>
    <label>Megasys Account Import Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>