force-app/main/default/objects/Loan_ReEngineering__c/fields/Megasys_Default_Fund_Code__c.field-meta.xml
<CustomField>
    <fullName>Megasys_Default_Fund_Code__c</fullName>
    <defaultValue>&quot;ACH&quot;</defaultValue>
    <label>Megasys Default Fund Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>