force-app/main/default/objects/Loan_ReEngineering__c/fields/Megasys_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Megasys_User_Name__c</fullName>
    <label>Megasys User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>