force-app/main/default/objects/Loan_ReEngineering__c/fields/NSF_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>NSF_Fee_Amount__c</fullName>
    <label>NSF Fee Amount</label>
    <length>10</length>
    <type>Text</type>
</CustomField>