force-app/main/default/objects/Loan_ReEngineering__c/fields/Run_Product_Before_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Product_Before_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To run or not to run Product Before Trigger</description>
    <inlineHelpText>To run or not to run Product Before Trigger</inlineHelpText>
    <label>Run Product Before Trigger</label>
    <type>Checkbox</type>
</CustomField>