force-app/main/default/objects/Loan_ReEngineering__c/fields/Run_Product_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Product_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Run Product Trigger</label>
    <type>Checkbox</type>
</CustomField>