force-app/main/default/objects/Loan_ReEngineering__c/fields/Run_Product_Validation_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Product_Validation_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Product Validation Trigger</label>
    <type>Checkbox</type>
</CustomField>