force-app/main/default/objects/Loan_ReEngineering__c/fields/Starting_Day_for_Loan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Starting_Day_for_Loan_Start_Date__c</fullName>
    <description>value to calculate First Loan Start Date</description>
    <label>Starting Day for Loan Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>