force-app/main/default/objects/Loan_ReEngineering__c/fields/VersaPay_Auth_Key__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_Auth_Key__c</fullName>
    <description>VersaPay Authentication Key</description>
    <label>VersaPay Auth Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>