force-app/main/default/objects/Loan_ReEngineering__c/fields/VersaPay_Auth_Key_Debit__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_Auth_Key_Debit__c</fullName>
    <description>VersaPay Auth Key Debit</description>
    <label>VersaPay Auth Key Debit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>