force-app/main/default/objects/Loan_ReEngineering__c/fields/VersaPay_Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_Auth_Token__c</fullName>
    <description>VersaPay Authentication Token</description>
    <label>VersaPay Auth Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>