force-app/main/default/objects/Loan_ReEngineering__c/fields/VersaPay_End_Point__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_End_Point__c</fullName>
    <description>VersaPay End Point for Callouts</description>
    <label>VersaPay End Point</label>
    <length>50</length>
    <type>Text</type>
</CustomField>