force-app/main/default/objects/Loan_ReEngineering__c/fields/VersaPay_Signing_Key__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_Signing_Key__c</fullName>
    <description>VersaPay signing key, to verify the authenticity of a webhook notification</description>
    <label>VersaPay Signing Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>